--- a/mdn.ipynb
+++ b/mdn.ipynb
@@ -222,7 +222,7 @@
     "\n",
     "Note the new cost function: we create a normal distribution out of the predicted `mu` and `sigma`, and then minimize the negative log-likelihood of this distribution yielding the traget value `y`. Mathematically, our cost function is the negative logarithm of the normal distribution's probability density function (PDF):\n",
     "\n",
-    "$$Cost = -\\log (PDF) = -\\log\\left(\\frac{1}{\\sqrt{2\\pi\\sigma}}\\cdot\\exp{\\left[-\\frac{(y-\\mu)^{2}}{2\\sigma^{2}}\\right]}\\right)$$"
+    "$$Cost = -\\log (PDF) = -\\log\\left(\\frac{1}{\\sqrt{2\\pi}\\sigma}\\cdot\\exp{\\left[-\\frac{(y-\\mu)^{2}}{2\\sigma^{2}}\\right]}\\right)$$"
    ]
   },
   {
