--- a/mdn-tf2.ipynb
+++ b/mdn-tf2.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This revision has been adapted to work with Tensorflow 2, remember to install tensorflow_probability as it has been moved from the main code to it's own package (pip install tensorflow_probability)"
+    "# MDN Hands On Tutorial\n",
+    "\n",
+    "This notebook demonstrates the construction of a simple MDN, and compares it to a regular neural network.\n",
+    "\n",
+    "Read about MDNs on the [original paper](https://publications.aston.ac.uk/373/1/NCRG_94_004.pdf) by C. Bishop."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MDN Hands On Tutorial\n",
-    "\n",
-    "This notebook demonstrates the construction of a simple MDN, and compares it to a regular neural network.\n",
-    "\n",
-    "Read about MDNs on the [original paper](https://publications.aston.ac.uk/373/1/NCRG_94_004.pdf) by C. Bishop."
+    "> This revision has been adapted to work with Tensorflow 2. Note that `tensorflow_probability` has been moved from the main code to it's own package (`pip install tensorflow_probability`)"
    ]
   },
   {
@@ -241,7 +241,7 @@
    "source": [
     "def mdn_cost(mu, sigma, y):\n",
     "    dist = tfp.distributions.Normal(loc=mu, scale=sigma)\n",
-    "    return tf.reduce_mean(-dist.log_prob(y))\n"
+    "    return tf.reduce_mean(-dist.log_prob(y))"
    ]
   },
   {
@@ -291,7 +291,7 @@
     "sigma = Dense(1, activation=lambda x: tf.nn.elu(x) + 1)(Layer_2)\n",
     "y_real = Input(shape=(1,))\n",
     "lossF = mdn_cost(mu,sigma,y_real)\n",
-    "model=Model(inputs=[InputLayer, y_real], outputs=[mu, sigma])\n",
+    "model = Model(inputs=[InputLayer, y_real], outputs=[mu, sigma])\n",
     "model.add_loss(lossF)\n",
     "adamOptimizer = optimizers.Adam(learning_rate=learning_rate)\n",
     "model.compile(optimizer=adamOptimizer,metrics=['mse'])\n",
@@ -338,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
